package GR2202_RafaelSergio.opcional;
/**
 * Enumeración TipoEntrada que define el tipo de cada entrada.
 * @author Rafael Sánchez Sánchez y Sergio Galán Martín: rafael.sanchez@estudiante.uam.es y sergio.galanm@estudiante.uam.es
 *
 */
public enum TipoEntrada{
    DIAESPECTADOR,
    PERSONAMAYOR,
    FIESTA,
    ESTANDAR;
}
